# story-time

./: .env.example  .gitignore  .remarkignore  .tdd-session-1770785918107.md  README.md  SETUP.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
backend/: .env.example
backend/src/: env.ts  index.ts
backend/src/api/: analysis.ts  complexity.ts  diff.ts  entities.ts  export.ts  history.ts  routes.ts  sessions.ts  textOperations.ts  timeline.ts
backend/src/config/: llmConfig.ts
backend/src/models/: types.ts
backend/src/providers/: llm-provider.ts  local-llm-provider.ts  ollama-provider.ts  provider-factory.ts
backend/src/services/: complexityMetricsService.ts  diff.ts  entityExtractionService.ts  exportService.ts  historyService.ts  llmService.ts  sessionService.ts  timelineService.ts  toneAnalysisService.ts
backend/tests/api/: analysis.test.ts  complexity.test.ts  diff.test.ts  entities.test.ts  export.test.ts  sessions.test.ts  textOperations.test.ts  timeline.test.ts
backend/tests/integration/: api-integration.test.ts  provider-integration.test.ts
backend/tests/providers/: llm-provider.test.ts  local-llm-provider.test.ts  ollama-provider.test.ts  (+1 more)
docs/: API.md  CI_MONITORING.md  SETUP.md  TDD_ROADMAP.md
frontend/: index.html  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: api.ts  diff.ts  export.ts  history.ts  main.ts  sessions.ts  state.ts  text-operations.ts  types.ts  ui.ts
scripts/: setup-llm-service.sh
services/: README.md  llm_service.py  pyproject.toml  requirements.txt
(+24 files in other folders)
